# moviepy-fastapi

./: .gitignore  README.md  pyproject.toml
moviepy_api/: main.py
moviepy_api/core/: api.py
