[tool.poetry]
name = "moviepy-api"
version = "0.1.0"
description = ""
authors = ["Daniel Andrés <Daniel.Andres.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "moviepy_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
moviepy = "^1.0.3"
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
